--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@matterlabs/composables": "1.1.7",
+    "@metamask/detect-provider": "^2.0.0",
     "@vueuse/components": "8.9.2",
     "@vueuse/core": "8.9.2",
     "date-fns": "2.28.0",
