--- a/packages/data-fetcher/.env.example
+++ b/packages/data-fetcher/.env.example
@@ -12,4 +12,7 @@ RPC_CALLS_RETRIES_MAX_TOTAL_TIMEOUT=120000
 RPC_CALLS_CONNECTION_TIMEOUT=60000
 RPC_CALLS_CONNECTION_QUICK_TIMEOUT=10000
 
+RPC_BATCH_MAX_SIZE_BYTES=1048576
+RPC_BATCH_MAX_COUNT=10
+
 MAX_BLOCKS_BATCH_SIZE=20
