--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -20,6 +20,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@fastify/secure-session": "^8.1.0",
     "@t3-oss/env-core": "^0.11.1",
     "close-with-grace": "^2.1.0",
