--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -14,8 +14,8 @@
     "build:watch": "tsx esbuild.ts --watch",
     "dev": "tsx watch src/index.ts",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"**/*.ts\"",
+    "lint:fix": "eslint \"**/*.ts\" --fix",
     "ci:prepare": "run-s check:fix typecheck",
     "test": "vitest run"
   },
