--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -93,7 +93,7 @@
     "storybook-vue3-router": "^2.2.1",
     "tailwindcss": "^3.0.23",
     "vite": "2.9.16",
-    "vitest": "0.19.0",
+    "vitest": "^2.1.4",
     "vue-loader": "16.8.3",
     "vue-tsc": "0.33.6"
   }
