feat(private-rpc): added db (wip)
working on adding the db.

--- a/packages/private-rpc/package.json
+++ b/packages/private-rpc/package.json
@@ -24,16 +24,20 @@
     "@t3-oss/env-core": "^0.11.1",
     "close-with-grace": "^2.1.0",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.0",
     "fastify": "^5.0.0",
     "fastify-type-provider-zod": "^4.0.2",
+    "pg": "^8.13.1",
     "typed-rpc": "^6.1.1",
     "viem": "^2.21.32",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22.7.6",
+    "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^8.12.1",
+    "drizzle-kit": "^0.27.1",
     "esbuild": "^0.24.0",
     "esbuild-node-externals": "^1.15.0",
     "eslint-config-prettier": "^9.1.0",
