--- a/packages/private-rpc/tsconfig.json
+++ b/packages/private-rpc/tsconfig.json
@@ -9,10 +9,17 @@
     "isolatedModules": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "Bundler",
     "module": "NodeNext",
     "outDir": "dist",
     "sourceMap": true,
-    "lib": ["es2022"]
+    "lib": [
+      "es2022"
+    ],
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
 }
