--- a/packages/private-rpc/example-permissions.yaml
+++ b/packages/private-rpc/example-permissions.yaml
@@ -15,7 +15,7 @@ contracts:
         write: "*"
   - address: "0xAe45cBE2d1E90358CbD216bC16f2C9267a4EA80a"
     methods:
-      - signature: "function _checkOwner() internal view virtual" # if it's not a hex its interpreted as function signature
+      - signature: "function _checkOwner() internal view virtual"
         read:
           - "users"
           - "admins"
