--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -117,11 +117,10 @@
   "prettier": "@matterlabs/prettier-config",
   "lint-staged": {
     "*.{js,ts}": [
-      "npm run lint"
+      "yarn run lint"
     ]
   },
   "engines": {
-    "npm": ">=9.0.0",
     "node": ">=18.0.0"
   }
 }
