--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -25,10 +25,10 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "db:create": "ts-node ./scripts/create-database.ts",
     "db:drop": "ts-node ./scripts/drop-database.ts",
-    "migration:generate": "npm run typeorm migration:generate ./src/migrations/$npm_config_name -- -d ./src/typeorm.config.ts",
-    "migration:create": "npm run typeorm migration:create ./src/migrations/$npm_config_name",
-    "migration:run": "npm run typeorm migration:run -- -d ./src/typeorm.config.ts",
-    "migration:revert": "npm run typeorm migration:revert -- -d ./src/typeorm.config.ts",
+    "migration:generate": "yarn typeorm migration:generate ./src/migrations/$npm_config_name -- -d ./src/typeorm.config.ts",
+    "migration:create": "yarn typeorm migration:create ./src/migrations/$npm_config_name",
+    "migration:run": "yarn typeorm migration:run -- -d ./src/typeorm.config.ts",
+    "migration:revert": "yarn typeorm migration:revert -- -d ./src/typeorm.config.ts",
     "migration-script:run": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ./src/migrationScripts/{migrationFileName}.ts --runInBand"
   },
   "dependencies": {
