--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -29,7 +29,8 @@
     "fastify-type-provider-zod": "^4.0.2",
     "siwe": "^2.3.2",
     "viem": "^2.21.32",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "ethers": "^6.13.4"
   },
   "devDependencies": {
     "@types/node": "^22.7.6",
