--- a/packages/private-rpc/Dockerfile
+++ b/packages/private-rpc/Dockerfile
@@ -28,6 +28,7 @@ COPY yarn.lock .
 # Install only prod dependencies
 RUN yarn install --production=true
 
-ENV PORT="3022"
+ENV PORT="4041"
+EXPOSE $PORT
 WORKDIR /app/packages/private-rpc
 CMD [ "node", "dist/index.js" ]
