--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -95,6 +95,7 @@
     "prettier": "2.3.1",
     "eslint": "8.57.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "@vue/eslint-config-prettier": "^9.0.0"
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "typescript": "5.1.3"
   }
 }
