feat: moved more configuration to .env files
Avoid hardcoded config.

--- a/docker-compose-00.yaml
+++ b/docker-compose-00.yaml
@@ -20,7 +20,7 @@ services:
       SERVER_PORT: 4040
       BLOCK_EXPLORER_API_URL: ${BLOCK_EXPLORER_API_URL}
       SESSION_SECRET: "0101010101010101010101010101010101010101010101010101010101010101"
-      CORS_ORIGIN: "http://localhost:3010"
+      CORS_ORIGIN: ${CORS_ORIGIN}
       RPC_URL: ${TARGET_RPC}
       USER_TOKEN_URL: http://private-rpc:4041/users
 
