--- a/compose-00.yaml
+++ b/compose-00.yaml
@@ -36,8 +36,11 @@ services:
       BLOCKCHAIN_RPC_URL: ${TARGET_RPC}
       DATA_FETCHER_URL: "http://data-fetcher:3040"
       BATCHES_PROCESSING_POLLING_INTERVAL: "1000"
-    ports:
-      - '3001:3001'
+    depends_on:
+      data-fetcher:
+        condition: service_started
+      explorer-db:
+        condition: service_healthy
     restart: on-failure
 
   api:
@@ -49,9 +52,6 @@ services:
       METRICS_PORT: "3005"
       LOG_LEVEL: "verbose"
       DATABASE_URL: "postgres://postgres:postgres@explorer-db:5432/block-explorer"
-    ports:
-      - '3021:3021'
-      - '3005:3005'
     depends_on:
       - worker
     restart: unless-stopped
@@ -65,7 +65,7 @@ services:
       - "4040:4040"
     environment:
       SERVER_PORT: 4040
-      BLOCK_EXPLORER_API_URL: ${BLOCK_EXPLORER_API_URL}
+      BLOCK_EXPLORER_API_URL: http://api:3021
       SESSION_SECRET: "0101010101010101010101010101010101010101010101010101010101010101"
       CORS_ORIGIN: "http://localhost:3010"
       RPC_URL: ${TARGET_RPC}
@@ -106,8 +106,6 @@ services:
       driver: none
     volumes:
       - db-private-rpc:/var/lib/postgresql/data
-    ports:
-      - "5433:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
@@ -124,8 +122,6 @@ services:
       driver: none
     volumes:
       - explorer-db:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
