--- a/compose-proxy.yaml
+++ b/compose-proxy.yaml
@@ -19,7 +19,7 @@ services:
     environment:
       SERVER_PORT: 4040
       BLOCK_EXPLORER_API_URL: ${BLOCK_EXPLORER_API_URL}
-      SESSION_SECRET: "0101010101010101010101010101010101010101010101010101010101010101"
+      SESSION_SECRET: ${SESSION_SECRET}
       CORS_ORIGIN: ${CORS_ORIGIN}
       RPC_URL: ${TARGET_RPC}
       USER_TOKEN_URL: http://private-rpc:4041/users
