feat(private-rpc): secure create token endpoint
Using simple private word auth to create a user token.

--- a/compose-00.yaml
+++ b/compose-00.yaml
@@ -57,7 +57,6 @@ services:
     restart: unless-stopped
 
   proxy:
-    platform: linux/x86_64
     build:
       context: .
       dockerfile: ./packages/proxy/Dockerfile
@@ -70,9 +69,9 @@ services:
       CORS_ORIGIN: "http://localhost:3010"
       RPC_URL: ${TARGET_RPC}
       USER_TOKEN_URL: http://private-rpc:4041/users
+      CREATE_TOKEN_SECRET: ${CREATE_TOKEN_SECRET}
 
   private-rpc-migrate:
-    platform: linux/x86_64
     build:
       context: .
       dockerfile: ./packages/private-rpc/Dockerfile
@@ -84,7 +83,6 @@ services:
       DATABASE_URL: "postgres://postgres:postgres@db-private-rpc:5432/private-rpc"
 
   private-rpc:
-    platform: linux/x86_64
     build:
       context: .
       dockerfile: ./packages/private-rpc/Dockerfile
@@ -103,6 +101,7 @@ services:
       TARGET_RPC: ${TARGET_RPC}
       PERMISSIONS_YAML_PATH: "/app/permissions.yaml"
       CORS_ORIGIN: ${CORS_ORIGIN}
+      CREATE_TOKEN_SECRET: ${CREATE_TOKEN_SECRET}
 
   db-private-rpc:
     image: "postgres:14"
