--- a/packages/private-rpc/example.env
+++ b/packages/private-rpc/example.env
@@ -3,3 +3,4 @@ PORT="4041"
 TARGET_RPC=http://localhost:3050
 PERMISSIONS_YAML_PATH="./example-permissions.yaml"
 CORS_ORIGIN="http://localhost:3010"
+CREATE_TOKEN_SECRET="sososecret"
