--- a/packages/app/Dockerfile
+++ b/packages/app/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:22-slim AS build
+RUN apt-get update && apt-get install -y python3 make g++
 WORKDIR /app
 
 # Copy config files to install dependencies
