--- a/packages/data-fetcher/Dockerfile
+++ b/packages/data-fetcher/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:22-slim AS build
+FROM node:22 AS build
+RUN apt-get update && apt-get install -y python3 make g++
 WORKDIR /app
 
 # Copy config files to install dependencies
