fix(app): several fixes in dev environment
Making app work better in dev environment.

--- a/compose-00.yaml
+++ b/compose-00.yaml
@@ -66,7 +66,7 @@ services:
       SERVER_PORT: 4040
       BLOCK_EXPLORER_API_URL: http://api:3021
       SESSION_SECRET: "0101010101010101010101010101010101010101010101010101010101010101"
-      CORS_ORIGIN: "http://localhost:3010"
+      CORS_ORIGIN: ${CORS_ORIGIN_PROXY}
       RPC_URL: ${TARGET_RPC}
       USER_TOKEN_URL: http://private-rpc:4041/users
       CREATE_TOKEN_SECRET: ${CREATE_TOKEN_SECRET}
@@ -100,7 +100,7 @@ services:
       DATABASE_URL: "postgres://postgres:postgres@db-private-rpc:5432/private-rpc"
       TARGET_RPC: ${TARGET_RPC}
       PERMISSIONS_YAML_PATH: "/app/permissions.yaml"
-      CORS_ORIGIN: ${CORS_ORIGIN}
+      CORS_ORIGIN: ${CORS_ORIGIN_RPC}
       CREATE_TOKEN_SECRET: ${CREATE_TOKEN_SECRET}
 
   db-private-rpc:
