--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "db:create": "lerna run db:create",
     "db:drop": "lerna run db:drop",
     "hyperchain:configure": "ts-node scripts/setup-hyperchain-config"
-
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -34,16 +33,17 @@
     "@semantic-release/github": "^8.0.2",
     "@semantic-release/npm": "^9.0.0",
     "@semantic-release/release-notes-generator": "^10.0.3",
+    "@treasure-dev/tailwind-config": "^4.3.0",
     "@types/node": "18.17.18",
+    "dotenv": "16.1.4",
+    "enquirer": "2.3.6",
     "eslint": "8.48.0",
     "husky": "8.0.1",
     "lerna": "^7.2.0",
+    "pg-connection-string": "2.6.2",
     "prettier": "2.8.4",
     "semantic-release": "^21.1.1",
-    "typescript": "4.7.4",
-    "enquirer": "2.3.6",
-    "dotenv": "16.1.4",
-    "pg-connection-string": "2.6.2"
+    "typescript": "4.7.4"
   },
   "engines": {
     "npm": ">=9.0.0",
