--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "db:drop": "lerna run db:drop",
     "hyperchain:configure": "ts-node scripts/setup-hyperchain-config"
   },
+  "dependencies": {
+    "@treasure-dev/tailwind-config": "^4.3.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
@@ -33,7 +36,6 @@
     "@semantic-release/github": "^8.0.2",
     "@semantic-release/npm": "^9.0.0",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@treasure-dev/tailwind-config": "^4.3.0",
     "@types/node": "18.17.18",
     "dotenv": "16.1.4",
     "enquirer": "2.3.6",
