--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -67,6 +67,7 @@
     "@tailwindcss/forms": "0.5.0",
     "@testing-library/user-event": "14.2.1",
     "@testing-library/vue": "6.6.0",
+    "@treasure-dev/tailwind-config": "^4.3.0",
     "@types/jsdom": "16.2.14",
     "@types/node": "^16.11.25",
     "@types/prismjs": "1.26.0",
