fix: temp correction to hero-banner-container
Comment out `hero-banner-container` as it adds invisible block preventing cllcking

--- a/packages/app/src/configs/hyperchain.config.json
+++ b/packages/app/src/configs/hyperchain.config.json
@@ -9,7 +9,7 @@
       "l1ExplorerUrl": "https://etherscan.io",
       "l2ChainId": 61166,
       "l2NetworkName": "Treasure",
-      "maintenance": false,
+      "maintenance": true,
       "name": "Treasure",
       "published": true,
       "rpcUrl": "https://rpc.treasure.lol",
