--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,6 +25,7 @@
     "*.{vue,js,ts}": "npm run lint"
   },
   "dependencies": {
+    "@gtm-support/vue-gtm": "^3.1.0",
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/providers": "^10.2.1",
     "@vueuse/components": "8.9.2",
