--- a/packages/worker/.env.example
+++ b/packages/worker/.env.example
@@ -30,6 +30,9 @@ RPC_BATCH_STALL_TIME_MS=0
 COLLECT_DB_CONNECTION_POOL_METRICS_INTERVAL=10000
 COLLECT_BLOCKS_TO_PROCESS_METRIC_INTERVAL=10000
 
+DISABLE_MISSING_BLOCKS_METRIC=false
+CHECK_MISSING_BLOCKS_METRIC_INTERVAL=86400000
+
 DISABLE_BATCHES_PROCESSING=false
 DISABLE_COUNTERS_PROCESSING=false
 DISABLE_OLD_BALANCES_CLEANER=false
