--- a/packages/data-fetcher/package.json
+++ b/packages/data-fetcher/package.json
@@ -24,12 +24,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/terminus": "^9.1.2",
     "@willsoto/nestjs-prometheus": "^4.7.0",
+    "axios": "^1.7.9",
     "ethers": "6.13.4",
     "nest-winston": "^1.7.0",
     "prom-client": "^14.1.0",
