--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -120,7 +120,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results
+          name: ${{ matrix.tags }}-allure-results
           path: packages/app/allure-results
 
       # - name: Upload test results to Allure reporter
@@ -136,7 +136,7 @@ jobs:
         name: Save artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: portal_e2e_${{ github.run_number }}_artifacts
+          name: portal_e2e_${{ github.run_number }}_${{ matrix.tags }}_artifacts
           path: packages/app/tests/e2e/artifacts/*
 
   # publish:
