chore: update `.env.example`

--- a/packages/worker/.env.example
+++ b/packages/worker/.env.example
@@ -16,6 +16,11 @@ WAIT_FOR_BLOCKS_INTERVAL=1000
 BLOCKS_PROCESSING_BATCH_SIZE=10
 NUMBER_OF_BLOCKS_PER_DB_TRANSACTION=10
 
+# Tee proof block start for:
+# mainnet 490556
+# testnet 10559
+# staging 583000
+TEE_PROOF_START_BATCH_NUMBER=490556
 BATCHES_PROCESSING_POLLING_INTERVAL=60000
 DELETE_BALANCES_INTERVAL=300000
 
