fix: return old value for e2e api testing

--- a/packages/api/.env.test
+++ b/packages/api/.env.test
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://postgres:notsecurepassword@localhost:5432/block-explorer-e2e
+DATABASE_URL='postgres://postgres:postgres@localhost:5432/block-explorer-e2e'
 METRICS_PORT=3005
 PORT=3007
 LIMITED_PAGINATION_MAX_ITEMS=15
