--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "block-explorer",
   "version": "1.0.0-development",
-  "title": "ZKsync Era Block Explorer",
-  "description": "ZKsync Era Block Explorer",
-  "author": "Matter Labs",
+  "title": "Revolution Block Explorer",
+  "description": "Revolution Block Explorer",
+  "author": "Amplify Digital",
   "license": "MIT",
   "repository": "https://github.com/matter-labs/block-explorer",
   "private": true,
