--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "app",
   "version": "0.0.0",
-  "title": "ZKsync Era Block Explorer App",
-  "description": "ZKsync Era Block Explorer App",
+  "title": "Revolution Block Explorer App",
+  "description": "Revolution Block Explorer App",
   "author": "Matter Labs",
   "private": true,
   "license": "MIT",
