--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -3,7 +3,6 @@ name: CI/CD Pipeline
 on:
   workflow_dispatch:
   push:
-    branches: [ main, master ]
     tags:
       - "v*.*.*"
   pull_request:
@@ -40,7 +39,6 @@ jobs:
   docker-build-push:
     needs: build-and-test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
     
     strategy:
       matrix:
@@ -68,10 +66,7 @@ jobs:
         with:
           images: ${{ secrets.DOCKERHUB_USERNAME }}/block-explorer-${{ matrix.service }}
           tags: |
-            type=ref,event=branch
             type=semver,pattern={{version}}
-            type=sha,format=short
-            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -79,7 +74,6 @@ jobs:
           context: .
           file: ./packages/${{ matrix.service }}/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/block-explorer-${{ matrix.service }}:${{ steps.meta.outputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
