--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "0.14.0",
+    "cookie-session": "^2.1.0",
     "ethers": "6.13.4",
     "helmet": "^6.0.0",
     "jest-mock-extended": "^3.0.1",
@@ -48,6 +49,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "siwe": "^3.0.0",
     "typeorm": "^0.3.16",
     "winston": "^3.8.2"
   },
@@ -55,6 +57,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/supertest": "^2.0.11",
