--- a/packages/api/.env.test
+++ b/packages/api/.env.test
@@ -12,3 +12,6 @@ BASE_TOKEN_NAME=Ether
 BASE_TOKEN_LIQUIDITY=220000000000
 BASE_TOKEN_USDPRICE=1800
 ETH_TOKEN_L2_ADDRESS=0x000000000000000000000000000000000000800A
+
+#PRIVIDIUM=true
+#PRIVIDIUM_SESSION_SECRET=sososecret
