--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -65,6 +65,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "express": "^4.18.2",
     "jest": "29.2.1",
     "jest-junit": "^14.0.1",
     "lint-staged": "^13.0.3",
