--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -74,7 +74,8 @@
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0"
+    "tsconfig-paths": "4.1.0",
+    "viem": "^2.29.3"
   },
   "jest": {
     "moduleFileExtensions": [
