--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -75,7 +75,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "viem": "^2.29.3"
+    "zksync-ethers": "^6.14.0"
   },
   "jest": {
     "moduleFileExtensions": [
