feat: add prividium private rpc token

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -34,9 +34,7 @@ ETH_TOKEN_LIQUIDITY=220000000000
 ETH_TOKEN_USDPRICE=1800
 
 # Prividium
-PRIVIDIUM=false
+DISABLE_PRIVIDIUM=false
 PRIVIDIUM_SESSION_SECRET=secret
 PRIVIDIUM_PRIVATE_RPC_URL=http://private-rpc:3000
 PRIVIDIUM_PRIVATE_RPC_SECRET=secret
-PRIVIDIUM_CHAIN_ID=300
-PRIVIDIUM_SESSION_MAX_AGE=86400000 # 1 day
