feat: add prividium private rpc token

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -32,3 +32,9 @@ ETH_TOKEN_ICON_URL=https://assets.coingecko.com/coins/images/279/large/ethereum.
 ETH_TOKEN_NAME=Ether
 ETH_TOKEN_LIQUIDITY=220000000000
 ETH_TOKEN_USDPRICE=1800
+
+# Prividium
+DISABLE_PRIVIDIUM=false
+PRIVIDIUM_SESSION_SECRET=secret
+PRIVIDIUM_PRIVATE_RPC_URL=http://private-rpc:3000
+PRIVIDIUM_PRIVATE_RPC_SECRET=secret
