--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -51,7 +51,8 @@
     "rxjs": "^7.2.0",
     "siwe": "^3.0.0",
     "typeorm": "^0.3.16",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
