feat: generate siwe on server

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -39,3 +39,4 @@ PRIVIDIUM=false
 PRIVIDIUM_SESSION_SECRET=secret
 PRIVIDIUM_PRIVATE_RPC_URL=http://private-rpc:3000
 PRIVIDIUM_PRIVATE_RPC_SECRET=secret
+PRIVIDIUM_CHAIN_ID=300
