--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -40,3 +40,4 @@ PRIVIDIUM_SESSION_SECRET=secret
 PRIVIDIUM_PRIVATE_RPC_URL=http://private-rpc:3000
 PRIVIDIUM_PRIVATE_RPC_SECRET=secret
 PRIVIDIUM_CHAIN_ID=300
+PRIVIDIUM_SESSION_MAX_AGE=86400000 # 1 day
