--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/providers": "^10.2.1",
+    "@sophon-labs/account-core": "^1.1.22",
     "@vueuse/components": "8.9.2",
     "@vueuse/core": "8.9.2",
     "date-fns": "2.28.0",
